fix album art shift in track info

--- a/src/app/components/player/track-info/track-info.component.css
+++ b/src/app/components/player/track-info/track-info.component.css
@@ -2,7 +2,7 @@
   position: relative;
   top: 0px;
   margin-top: -250px;
-  width: 280px;
+  width: 300px;
   margin-left: 10px;
   margin-right: 10px;
   display: inline-block;
